@startuml dp9-decorator
!include _amateras.puml
title DP#9 Decorator — 좌석 부가옵션 누적

interface SeatView <<Component>> {
  +getSeat(): Seat
  +getDescription(): String
  +getSurcharge(): BigDecimal
  +getMetadataLabels(): List<String>
}
class SeatViewAdapter <<ConcreteComponent>>
abstract class AbstractSeatDecorator <<Decorator>> {
  #wrapped: SeatView
}
class WindowSeatDecorator
class AisleSeatDecorator
class ExtraLegroomDecorator
class LoungeAccessDecorator

SeatView <|.. SeatViewAdapter
SeatView <|.. AbstractSeatDecorator
AbstractSeatDecorator o--> SeatView : wrapped
AbstractSeatDecorator <|-- WindowSeatDecorator
AbstractSeatDecorator <|-- AisleSeatDecorator
AbstractSeatDecorator <|-- ExtraLegroomDecorator
AbstractSeatDecorator <|-- LoungeAccessDecorator
note bottom : 창측 + 레그룸(+5만) + 라운지(+8만)\n런타임 체인으로 설명/요금 누적
@enduml
